@@ -1,7 +1,7 @@
 bin_PROGRAMS = sdparm
 
 # for C++/clang testing
-## CC = g++ -std=c++11
+## CC = g++
 ## CC = g++
 ## CC = clang
 ## CC = clang++
@@ -9,6 +9,7 @@ bin_PROGRAMS = sdparm
 # -std=<s> can be c99, c11, gnu11, etc. Default is gnu89 (gnu90 is the same)
 AM_CFLAGS = -I$(top_srcdir)/include -Wall -W
 # AM_CFLAGS = -I$(top_srcdir)/include -Wall -W -pedantic -std=c11
+# AM_CFLAGS = -I$(top_srcdir)/include -Wall -W -pedantic -std=c++11
 
 sdparm_SOURCES =	sdparm.c	\
 			sdparm.h	\
