@@ -2,7 +2,8 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.09 [20131202] [svn: r228]
+ChangeLog for sdparm-1.09 [20131219] [svn: r229]
+  - decode Third Party Copy VPD page
   - fix manufacturer-assigned serial number VPD page length
   - device id VPD: T10 vendor identification designator clean up
   - standard inquiry response (sinq): add LU_CONG
